@@ -236,6 +236,8 @@ const sd_bus_vtable user_vtable[] = {
 
 int user_object_find(sd_bus *bus, const char *path, const char *interface, void *userdata, void **found, sd_bus_error *error) {
         Manager *m = userdata;
+        unsigned long lu;
+        const char *p;
         User *user;
         int r;
 
@@ -245,42 +247,17 @@ int user_object_find(sd_bus *bus, const char *path, const char *interface, void 
         assert(found);
         assert(m);
 
-        if (streq(path, "/org/freedesktop/login1/user/self")) {
-                _cleanup_bus_creds_unref_ sd_bus_creds *creds = NULL;
-                sd_bus_message *message;
-                pid_t pid;
+        p = startswith(path, "/org/freedesktop/login1/user/_");
+        if (!p)
+                return 0;
 
-                message = sd_bus_get_current_message(bus);
-                if (!message)
-                        return 0;
+        r = safe_atolu(p, &lu);
+        if (r < 0)
+                return 0;
 
-                r = sd_bus_query_sender_creds(message, SD_BUS_CREDS_PID, &creds);
-                if (r < 0)
-                        return r;
-
-                r = sd_bus_creds_get_pid(creds, &pid);
-                if (r < 0)
-                        return r;
-
-                r = manager_get_user_by_pid(m, pid, &user);
-                if (r <= 0)
-                        return 0;
-        } else {
-                unsigned long lu;
-                const char *p;
-
-                p = startswith(path, "/org/freedesktop/login1/user/_");
-                if (!p)
-                        return 0;
-
-                r = safe_atolu(p, &lu);
-                if (r < 0)
-                        return 0;
-
-                user = hashmap_get(m->users, ULONG_TO_PTR(lu));
-                if (!user)
-                        return 0;
-        }
+        user = hashmap_get(m->users, ULONG_TO_PTR(lu));
+        if (!user)
+                return 0;
 
         *found = user;
         return 1;
