@@ -53,6 +53,7 @@ systemd System and Service Manager
  * logind:
  	- remove “GetSessionByPID” dbus method;
  	- remove “GetUserByPID” dbus method;
+ 	- don't support self seat, user and session dbus objects;
  * loginctl:
  	- remove “machine” argument option;
  * systemd-analyze:
